--- a/src/app/security-group/sg-sidebar/sg-vm-list/security-group-vm-list.component.html
+++ b/src/app/security-group/sg-sidebar/sg-vm-list/security-group-vm-list.component.html
@@ -17,7 +17,7 @@
         <div *ngFor="let vm of vmList">
           <div class="vm-link">
             <ng-template [ngIf]="isModeShared">
-              <a routerLink="{{ getVmLink(vm) }}">{{ vm.name }}</a>
+              <a routerLink="{{ getVmLink(vm) }}">{{ vm.displayname }}</a>
             </ng-template>
             <ng-template [ngIf]="isModePrivate">
               <span>{{ vm.displayname }}</span>
