feat(vm-logs): scroll

--- a/src/app/shared/components/list/list.component.html
+++ b/src/app/shared/components/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="detail-list margin-right">
+<div class="detail-list list-scroll-container">
   <ng-content select="[cs-panels]"></ng-content>
   <ng-content select="[cs-list]"></ng-content>
 </div>
