--- a/src/app/template/containers/template-filter.container.html
+++ b/src/app/template/containers/template-filter.container.html
@@ -10,6 +10,7 @@
   [groups]="groups$ | async"
   [availableGroupings]="availableGroupings"
   [query]="query$ | async"
+  [sidebarWidth]="sidebarWidth$ | async"
 
   [viewMode]="selectedViewMode$ | async"
   [selectedAccountIds]="selectedAccountIds$ | async"
