--- a/src/app/template/template-filter-list/template-filter-list-selector.component.html
+++ b/src/app/template/template-filter-list/template-filter-list-selector.component.html
@@ -11,6 +11,7 @@
   [selectedOsFamilies]="selectedOsFamilies"
   [selectedTypes]="selectedTypes"
   [query]="query"
+  [sidebarWidth]="sidebarWidth$ | async"
 
   (queryChange)="queryChanged.emit($event)"
   (selectedGroupsChange)="selectedGroupsChanged.emit($event)"
