--- a/src/app/template/template-filters/template-filters.component.html
+++ b/src/app/template/template-filters/template-filters.component.html
@@ -1,4 +1,4 @@
-<div class="filter-wrapper" [style.margin-right.px]="marginRight">
+<div class="filter-wrapper" [style.margin-right.px]="sidebarWidth">
   <mat-button-toggle-group
     (change)="setMode($event.value)"
     name="viewMode"
