--- a/src/app/vm/vm-creation/template/vm-template-dialog.component.html
+++ b/src/app/vm/vm-creation/template/vm-template-dialog.component.html
@@ -11,6 +11,7 @@
     [query]="query"
     [groups]="groups"
     [fetching]="isLoading"
+    [sidebarWidth]="sidebarWidth"
     [selectedTemplate]="preselectedTemplate"
     (selectedTemplateChange)="onSelectedTemplateChange($event)"
     (viewModeChange)="viewModeChange.emit($event)"
