--- a/src/app/volume/volume-filter/volume-filter.component.html
+++ b/src/app/volume/volume-filter/volume-filter.component.html
@@ -1,5 +1,5 @@
 <div class="filter-wrapper"
-     [style.margin-right.px]="marginRight">
+     [style.margin-right.px]="sidebarWidth">
   <mat-checkbox
     name="volumeOnly"
     [(ngModel)]="spareOnly"
