--- a/src/app/template/template-sidebar/base-template-sidebar.component.scss
+++ b/src/app/template/template-sidebar/base-template-sidebar.component.scss
@@ -15,7 +15,8 @@ mat-icon {
 }
 
 :host /deep/ .mat-tab-link {
-  min-width: 33% !important;
+  min-width: 0 !important;
+  flex: 1 1 auto;
 }
 
 .title-container {
