--- a/src/app/vm/vm-sidebar/vm-sidebar.component.html
+++ b/src/app/vm/vm-sidebar/vm-sidebar.component.html
@@ -1,13 +1,13 @@
 <ng-container *ngIf="entity">
   <div class="title-container">
-    <div class="color-title-container">
+    <div class="title-container">
       <div class="title-color-container">
         <cs-vm-color
           [vm]="entity"
           (onColorChange)="colorChanged.emit($event)"
         ></cs-vm-color>
       </div>
-      <h4 class="details-header ml-1">
+      <h4 class="details-header">
         {{ entity.displayname }}
       </h4>
     </div>
