--- a/src/app/vm/vm-sidebar/vm-sidebar.component.scss
+++ b/src/app/vm/vm-sidebar/vm-sidebar.component.scss
@@ -16,7 +16,8 @@ h3 {
 }
 
 :host /deep/ .mat-tab-link {
-  min-width: 25% !important;
+  min-width: 0 !important;
+  flex: 1 1 auto;
 }
 
 .title-color-container {
@@ -58,11 +59,4 @@ h3 {
 
 .vm-actions-container {
   text-align: right;
-}
-
-.color-title-container {
-  display: flex;
-  justify-content: start;
-  width: 90%;
-  align-items: center;
 }
