sidebar width in default config is a number

--- a/src/app/template/template-filter-list/template-filter-list-selector.component.html
+++ b/src/app/template/template-filter-list/template-filter-list-selector.component.html
@@ -11,7 +11,7 @@
   [selectedOsFamilies]="selectedOsFamilies"
   [selectedTypes]="selectedTypes"
   [query]="query"
-  [sidebarWidth]="sidebarWidth$ | async"
+  [sidebarWidth]="sidebarWidth"
 
   (queryChange)="queryChanged.emit($event)"
   (selectedGroupsChange)="selectedGroupsChanged.emit($event)"
