--- a/src/app/vm/vm-list-item/card-item/vm-list-card-item.component.html
+++ b/src/app/vm/vm-list-item/card-item/vm-list-card-item.component.html
@@ -34,16 +34,24 @@
         </tr>
       </thead>
       <tr>
-        <td>{{ 'SERVICE_OFFERING.CPU_MHZ' | translate:({ count: item.cpunumber, speed: item.cpuspeed }) }}</td>
-        <td>
-          <ng-container *ngIf="item.memory < gigabyte">
-            {{ 'UNITS.MB_VALUE' | translate:({ value: getMemoryInMb() }) }}
-          </ng-container>
-          <ng-container *ngIf="item.memory >= gigabyte">
-            {{ 'UNITS.GB_VALUE' | translate:({ value: getMemoryInGb() }) }}
-          </ng-container>
+        <td class="entity-card-data-line"
+            [matTooltip]="'SERVICE_OFFERING.CPU_MHZ' | translate:({ count: item.cpunumber, speed: item.cpuspeed })">
+          {{ 'SERVICE_OFFERING.CPU_MHZ' | translate:({ count: item.cpunumber, speed: item.cpuspeed }) }}
         </td>
-        <td>{{ 'UNITS.GB_VALUE' | translate:({ value: getDisksSize.toFixed(2) }) }}</td>
+        <td class="entity-card-data-line">
+          <span *ngIf="item.memory < gigabyte"
+                [matTooltip]="'UNITS.MB_VALUE' | translate:({ value: getMemoryInMb() })">
+            {{ 'UNITS.MB_VALUE' | translate:({ value: getMemoryInMb() }) }}
+          </span>
+          <span *ngIf="item.memory >= gigabyte"
+                [matTooltip]="'UNITS.GB_VALUE' | translate:({ value: getMemoryInGb() })">
+            {{ 'UNITS.GB_VALUE' | translate:({ value: getMemoryInGb() }) }}
+          </span>
+        </td>
+        <td class="entity-card-data-line"
+            [matTooltip]="'UNITS.GB_VALUE' | translate:({ value: getDisksSize.toFixed(2) })">
+          {{ 'UNITS.GB_VALUE' | translate:({ value: getDisksSize.toFixed(2) }) }}
+        </td>
       </tr>
     </table>
   </mat-card-content>
