fix autoscroll refresh

--- a/src/app/vm-logs/vm-logs/vm-logs.component.html
+++ b/src/app/vm-logs/vm-logs/vm-logs.component.html
@@ -2,7 +2,7 @@
 <cs-list
   infiniteScroll
   (scrolled)="onScroll()"
-  [infiniteScrollContainer]="'.list-scroll-container'"
+  [infiniteScrollContainer]="scrollContainerSelector"
   [immediateCheck]="true"
   [scrollWindow]="false"
   [creationEnabled]="false"
