--- a/src/app/shared/components/list/list.component.html
+++ b/src/app/shared/components/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="detail-list list-scroll-container">
+<div id="list-scroll-container" class="detail-list">
   <ng-content select="[cs-panels]"></ng-content>
   <ng-content select="[cs-list]"></ng-content>
 </div>
