--- a/src/app/vm-logs/vm-logs-table/vm-logs-table.component.html
+++ b/src/app/vm-logs/vm-logs-table/vm-logs-table.component.html
@@ -39,7 +39,7 @@
       </ng-container>
 
       <mat-header-row *cdkHeaderRowDef="tableColumns"></mat-header-row>
-      <mat-row *cdkRowDef="let row; columns: tableColumns;"></mat-row>
+      <mat-row #row *cdkRowDef="let row; columns: tableColumns;"></mat-row>
     </mat-table>
     <button
       class="show-more"
