feat(vm-logs): scroll (#1399)
* docs: LogView Plugin description corrected

* fix(config): remove outdated config properties (#1365)

* feat(vm-logs): scroll

* fix merge conflict

* fix tests

* fix autoscroll refresh

* move selector

--- a/src/app/shared/components/list/list.component.html
+++ b/src/app/shared/components/list/list.component.html
@@ -1,4 +1,4 @@
-<div class="detail-list margin-right">
+<div id="list-scroll-container" class="detail-list">
   <ng-content select="[cs-panels]"></ng-content>
   <ng-content select="[cs-list]"></ng-content>
 </div>
