--- a/src/app/shared/components/disk-offering/disk-offering-selector/disk-offering-selector.component.html
+++ b/src/app/shared/components/disk-offering/disk-offering-selector/disk-offering-selector.component.html
@@ -1,28 +1,16 @@
-<ng-container *ngIf="enableSelector">
-  <div class="top-row">
-    <h4 class="disk-offerings">{{ 'VM_PAGE.VM_CREATION.DISK_OFFERING' | translate }}</h4>
+<cs-disk-offering-selector-chooser
+  *ngIf="enableSelector"
+  [diskOfferings]="diskOfferings"
+  [diskOffering]="diskOffering"
+  [availableStorage]="availableStorage"
+  (changed)="changedOffering($event)"
+></cs-disk-offering-selector-chooser>
 
-    <button mat-button type="button" (click)="changeOffering()">
-      {{ 'COMMON.SELECT' | translate }}
-    </button>
-  </div>
-
-  <div class="mat-form-field-wrapper">
-    <span class="disk-offering-info truncate">
-      <ng-container *ngIf="diskOffering; then offeringName else nameStub"></ng-container>
-      <ng-template #offeringName>{{ diskOffering.name }}</ng-template>
-      <ng-template #nameStub>{{ 'VOLUME_PAGE.DETAILS.DISK_OFFERING' | translate }}</ng-template>
-    </span>
-  </div>
-</ng-container>
-
-<cs-slider
+<cs-disk-offering-selector-slider
   *ngIf="enableSlider"
-  name="new-size"
   [min]="min"
   [max]="max"
-  [label]="'VM_PAGE.STORAGE_DETAILS.VOLUME_RESIZE.NEW_SIZE' | translate"
-  [ngModel]="newSize"
-  (ngModelChange)="changedSize.next($event)"
-  [units]="'UNITS.GB' | translate"
-></cs-slider>
+  [newSize]="newSize"
+  [diskOffering]="diskOffering"
+  (changedOffering)="changed.next($event)"
+></cs-disk-offering-selector-slider>
