--- a/src/app/settings/components/session-timeout/session-timeout.component.html
+++ b/src/app/settings/components/session-timeout/session-timeout.component.html
@@ -1,20 +1,21 @@
 <h3 class="no-margin nowrap">{{ 'SETTINGS.SECURITY.SESSION_TIMEOUT' | translate }}</h3>
-<mat-form-field>
-  <input
-    #timeoutField
-    matInput
-    type="number"
-    [value]="sessionTimeout"
-    min="0"
-    csMinValue="0"
-    [max]="maxSessionTimeout"
-    [csMaxValue]="maxSessionTimeout"
-    step="1"
-    required
-  >
-</mat-form-field>
 
-<div class="update-button">
+<cs-update-button-field-group>
+  <mat-form-field>
+    <input
+      #timeoutField
+      matInput
+      type="number"
+      [value]="sessionTimeout"
+      min="0"
+      csMinValue="0"
+      [max]="maxSessionTimeout"
+      [csMaxValue]="maxSessionTimeout"
+      step="1"
+      required
+    >
+  </mat-form-field>
+
   <button
     mat-button
     [disabled]="sessionTimeout == +timeoutField.value"
@@ -22,4 +23,4 @@
   >
     {{ 'COMMON.UPDATE' | translate }}
   </button>
-</div>
+</cs-update-button-field-group>
