--- a/src/app/settings/components/vm-logs-settings/vm-logs-messages/vm-logs-messages.component.html
+++ b/src/app/settings/components/vm-logs-settings/vm-logs-messages/vm-logs-messages.component.html
@@ -2,7 +2,7 @@
   {{ 'SETTINGS.VM_LOGS.SHOW_LAST_MESSAGES' | translate }}
 </h3>
 
-<cs-update-button-field>
+<cs-update-button-field-group>
   <mat-form-field>
     <input
       #messagesField
@@ -23,4 +23,4 @@
   >
     {{ 'COMMON.UPDATE' | translate }}
   </button>
-</cs-update-button-field>
+</cs-update-button-field-group>
