fix: vm creation window collapses (#1375)
* fix: vm creation window collapses

* remove redundant conditional

* update condition for submit button in vm creation

* separate function for counting resources

--- a/src/app/vm/vm-creation/vm-creation.component.html
+++ b/src/app/vm/vm-creation/vm-creation.component.html
@@ -90,7 +90,7 @@
                 </div>
 
                 <div
-                  *ngIf="vmCreationState.zone && serviceOfferings?.length"
+                  *ngIf="vmCreationState.zone"
                   class="dialog-select-wrapper"
                 >
                   <cs-service-offering-selector
