--- a/src/app/snapshot/recurring-snapshots/policy-editor/daily/daily-policy.component.html
+++ b/src/app/snapshot/recurring-snapshots/policy-editor/daily/daily-policy.component.html
@@ -1,7 +1,6 @@
 <cs-time-picker
   name="time"
   [label]="'SNAPSHOT_POLICIES.TIME' | translate"
-  [time]="policy"
-  (changed)="policy"
+  [(ngModel)]="policy"
   [timeFormat]="timeFormat"
 ></cs-time-picker>
