feat(disk-offering): show all disk offerings when creating a data disk (#1405)
* feat(disk-offering): show all disk offerings when creating a data disk and show error message when chosen disk offering don't fit account resource limitations

* feat(disk-offering): fix test

* fixes after review

* fix bug

* feat(disk-offerings): add slider to selector component

* fix test

* disable creation when disk offering doesnt fit the account resources

* update after merge

* fix typings

* update

* fix conditionals for selector and slider

* fix volume resize

* fixes for style guide

* fix after review

* add selector isDiskOfferingAvailableByResources

* remove unused import

* fix bugs after testing

* remove log

* add availableStorage selector

* remove unused

* commented test

* commented test

* dispatch zone from page

* change load offering request

* load all disk offerings without restriction of size

* update

* update

--- a/src/app/shared/actions/volume-actions/volume-resize/volume-resize.component.html
+++ b/src/app/shared/actions/volume-actions/volume-resize/volume-resize.component.html
@@ -9,23 +9,17 @@
     novalidate
   >
     <div class="mat-dialog-content">
-      <div *ngIf="!volumeIsRoot && diskOfferings?.length">
-        <cs-disk-offering-selector
-          name="diskOffering"
-          [diskOfferings]="diskOfferings"
-          [ngModel]="diskOffering"
-          (changed)="updateDiskOffering($event)"
-        ></cs-disk-offering-selector>
-        </div>
-      <cs-slider
-        *ngIf="isCustomizedForVolume(diskOffering) || volumeIsRoot"
+      <cs-disk-offering-selector
+        name="diskOffering"
+        [enableSelector]="!volumeIsRoot && diskOfferings?.length"
+        [enableSlider]="isCustomizedForVolume(diskOffering) || volumeIsRoot"
         [min]="volume.size | division:2:30"
-        [max]="rootDiskSizeLimit"
-        [label]="'VM_PAGE.STORAGE_DETAILS.VOLUME_RESIZE.NEW_SIZE' | translate"
-        [(ngModel)]="newSize"
-        name="new-size"
-        [units]="'UNITS.GB' | translate"
-      ></cs-slider>
+        [newSize]="newSize"
+        [availableStorage]="availableStorage"
+        [diskOfferings]="diskOfferings"
+        [diskOffering]="diskOffering"
+        (changed)="updateDiskOffering($event)"
+      ></cs-disk-offering-selector>
     </div>
     <div class="mat-dialog-actions">
       <button mat-button color="primary" matDialogClose type="button">
