--- a/src/app/shared/components/disk-offering/disk-offering-dialog/disk-offering-dialog.component.html
+++ b/src/app/shared/components/disk-offering/disk-offering-dialog/disk-offering-dialog.component.html
@@ -89,7 +89,9 @@
 <ng-template #noResults>
   <cs-no-results></cs-no-results>
 </ng-template>
-
+<mat-error *ngIf="resourcesLimitExceeded">
+  {{ "ERRORS.VOLUME.VOLUME_RESOURCES_LIMIT_EXCEEDED" | translate }}
+</mat-error>
 <div class="mat-dialog-actions">
   <button
     mat-button
