--- a/src/app/vm/vm-creation/vm-creation.component.html
+++ b/src/app/vm/vm-creation/vm-creation.component.html
@@ -109,8 +109,11 @@
                 <div *ngIf="diskOfferingsAreAllowed()">
                   <cs-disk-offering-selector
                     name="diskOffering"
+                    [availableStorage]="account.primarystorageavailable"
+                    [min]="minSize"
                     [diskOfferings]="diskOfferings"
-                    [ngModel]="vmCreationState?.diskOffering"
+                    [account]="account"
+                    [diskOffering]="vmCreationState?.diskOffering"
                     (changed)="diskOfferingChange.emit($event)"
                   ></cs-disk-offering-selector>
                 </div>
@@ -125,6 +128,9 @@
                     [units]="'UNITS.GB' | translate"
                   ></cs-slider>
                 </div>
+                <span *ngIf="!isDiskOfferingAvailableByResources" class="error-message">
+                  {{ 'ERRORS.VOLUME.VOLUME_RESOURCES_LIMIT_EXCEEDED' | translate }}
+                </span>
               </div>
             </mat-tab>
 
