--- a/src/app/account/account-sidebar/account-sidebar.component.html
+++ b/src/app/account/account-sidebar/account-sidebar.component.html
@@ -11,7 +11,7 @@
   </div>
 
 
-  <nav #tabs [csUpdate]="tabs" mat-tab-nav-bar>
+  <nav #tabs [csSidebarTabNav]="tabs" mat-tab-nav-bar>
     <a
       matTabLink
       [routerLink]="['./account']"
