--- a/src/app/snapshot/snapshots-page/snapshot-filter/snapshot-filter.component.html
+++ b/src/app/snapshot/snapshots-page/snapshot-filter/snapshot-filter.component.html
@@ -1,4 +1,4 @@
-<div class="filter-wrapper" [style.margin-right.px]="sidebarWidth">
+<div class="filter-wrapper">
   <mat-form-field *ngIf="accounts.length > 1">
     <mat-select
       multiple="true"
