--- a/src/app/snapshot/snapshots-page/snapshots-page.component.html
+++ b/src/app/snapshot/snapshots-page/snapshots-page.component.html
@@ -1,7 +1,4 @@
-<cs-list
-  [isOpen]="listService?.hasSelected()"
-  [creationEnabled]="false"
->
+<cs-list [creationEnabled]="false">
   <ng-container cs-panels>
     <cs-top-bar cs-list>
       <cs-snapshots-filter-container></cs-snapshots-filter-container>
