--- a/src/app/template/template-sidebar/base-template-sidebar.component.html
+++ b/src/app/template/template-sidebar/base-template-sidebar.component.html
@@ -10,7 +10,7 @@
     ></cs-template-actions-sidebar-container>
   </div>
 
-  <nav #tabs [csUpdate]="tabs" mat-tab-nav-bar>
+  <nav #tabs [csSidebarTabNav]="tabs" mat-tab-nav-bar>
     <a
       matTabLink
       [routerLink]="['./details']"
