--- a/src/app/vm/vm-page/vm-page.component.html
+++ b/src/app/vm/vm-page/vm-page.component.html
@@ -1,7 +1,4 @@
-<cs-list
-  (action)="showVmCreationDialog()"
-  [isOpen]="listService?.hasSelected()"
->
+<cs-list (action)="showVmCreationDialog()">
   <ng-container cs-panels>
     <cs-top-bar>
       <cs-vm-statistics-container></cs-vm-statistics-container>
