--- a/src/app/volume/volume-filter/volume-filter.component.html
+++ b/src/app/volume/volume-filter/volume-filter.component.html
@@ -1,5 +1,4 @@
-<div class="filter-wrapper"
-     [style.margin-right.px]="sidebarWidth">
+<div class="filter-wrapper">
   <mat-checkbox
     name="volumeOnly"
     [(ngModel)]="spareOnly"
