--- a/src/app/volume/volume-page/volume-page.component.html
+++ b/src/app/volume/volume-page/volume-page.component.html
@@ -1,7 +1,4 @@
-<cs-list
-  (action)="activate()"
-  [isOpen]="listService?.hasSelected()"
->
+<cs-list (action)="activate()">
   <ng-container cs-panels>
     <cs-top-bar>
       <cs-volume-filter-container
