--- a/src/app/shared/components/top-bar/top-bar.component.html
+++ b/src/app/shared/components/top-bar/top-bar.component.html
@@ -2,11 +2,8 @@
   <div class="top-bar-content">
     <ng-content></ng-content>
   </div>
-  <div
+  <cs-notification-box
     class="top-bar-notifications"
     [class.sidebar-open]="sidebarOpen"
-    [style.right.px]="right"
-  >
-    <cs-notification-box></cs-notification-box>
-  </div>
+  ></cs-notification-box>
 </div>
