--- a/src/app/volume/volume-sidebar/volume-sidebar.component.html
+++ b/src/app/volume/volume-sidebar/volume-sidebar.component.html
@@ -4,7 +4,7 @@
     <cs-volume-actions-sidebar [volume]="entity"></cs-volume-actions-sidebar>
   </div>
 
-  <nav #tabs [csUpdate]="tabs" mat-tab-nav-bar>
+  <nav #tabs [csSidebarTabNav]="tabs" mat-tab-nav-bar>
     <a
       matTabLink
       [routerLink]="['./volume']"
