feat(sidebar): implement the ability to resize details sidebar (#1407)
PR Close #1308

--- a/src/app/account/account-page/account-page.component.html
+++ b/src/app/account/account-page/account-page.component.html
@@ -1,7 +1,4 @@
-<cs-list *ngIf="isAdmin()"
-  (action)="showCreationDialog()"
-         [isOpen]="listService?.hasSelected()"
->
+<cs-list *ngIf="isAdmin()" (action)="showCreationDialog()">
   <ng-container cs-panels>
     <cs-top-bar>
       <cs-account-filter-container
