--- a/src/app/shared/components/fab/fab.component.scss
+++ b/src/app/shared/components/fab/fab.component.scss
@@ -1,7 +1,6 @@
 @import '../../../../style/__variables';
 
-.fab {
-  transition: margin .4s cubic-bezier(.25,.8,.25,1);
+:host {
   position: fixed;
   right: 32px;
   bottom: 32px;
@@ -26,8 +25,4 @@
 
 /deep/ .mat-mini-fab .mat-button-wrapper {
   padding: 7px 0 !important;
-}
-
-:host.open .fab {
-  margin-right: $sidebar-width;
 }
