--- a/src/app/shared/components/sidebar/sidebar-container/sidebar-container.component.html
+++ b/src/app/shared/components/sidebar/sidebar-container/sidebar-container.component.html
@@ -1,4 +1,15 @@
-<div cdk-scrollable class="sidebar" [class.open]="isOpen">
+<div
+  class="sidebar"
+  [class.open]="isOpen"
+  [style.width.px]="sidebarWidth$ | async"
+  cdk-scrollable
+  ngResizable
+  [rzHandles]="'w'"
+  [rzMinWidth]="330"
+  [rzMaxWidth]="660"
+  (rzStop)="onResizeStop($event)"
+  (rzResizing)="onResize($event)"
+>
   <ng-content></ng-content>
 </div>
 <div
