--- a/src/app/shared/components/top-bar/top-bar.component.html
+++ b/src/app/shared/components/top-bar/top-bar.component.html
@@ -2,7 +2,8 @@
   <div class="top-bar-content">
     <ng-content></ng-content>
   </div>
-  <div class="top-bar-notifications" [class.sidebar-open]="sidebarOpen">
-    <cs-notification-box></cs-notification-box>
-  </div>
+  <cs-notification-box
+    class="top-bar-notifications"
+    [class.sidebar-open]="sidebarOpen"
+  ></cs-notification-box>
 </div>
