--- a/src/app/snapshot/snapshots-page/snapshot-filter/snapshot-filter.component.html
+++ b/src/app/snapshot/snapshots-page/snapshot-filter/snapshot-filter.component.html
@@ -1,5 +1,17 @@
 <div class="filter-wrapper">
-  <mat-form-field *ngIf="accounts.length > 1">
+  <mat-button-toggle-group
+    [value]="viewMode"
+    (change)="onViewModeChange($event.value)"
+  >
+    <mat-button-toggle [value]="snapshotPageViewMode.Volume">
+      {{ 'SNAPSHOT_PAGE.FILTERS.VOLUME' | translate }}
+    </mat-button-toggle>
+    <mat-button-toggle [value]="snapshotPageViewMode.VM">
+      {{ 'SNAPSHOT_PAGE.FILTERS.VM' | translate }}
+    </mat-button-toggle>
+  </mat-button-toggle-group>
+
+  <mat-form-field *ngIf="accounts.length > 1 && viewMode === snapshotPageViewMode.Volume">
     <mat-select
       multiple="true"
       [placeholder]="'SNAPSHOT_PAGE.FILTERS.SELECT_ACCOUNTS' | translate"
@@ -13,7 +25,8 @@
       </mat-option>
     </mat-select>
   </mat-form-field>
-  <mat-form-field>
+
+  <mat-form-field *ngIf="viewMode === snapshotPageViewMode.Volume">
     <mat-select
       multiple="true"
       [placeholder]="'SNAPSHOT_PAGE.FILTERS.SELECT_TYPES' | translate"
@@ -25,7 +38,8 @@
       </mat-option>
     </mat-select>
   </mat-form-field>
-  <mat-form-field>
+
+  <mat-form-field *ngIf="viewMode === snapshotPageViewMode.Volume">
     <cs-draggable-select
       multiple="true"
       [placeholder]="'SNAPSHOT_PAGE.FILTERS.GROUP_BY' | translate"
@@ -53,7 +67,7 @@
   ></cs-date-picker>
 </div>
 
-<div class="filter-wrapper">
+<div class="filter-wrapper" *ngIf="viewMode === snapshotPageViewMode.Volume">
   <cs-search
     [ngModel]="query"
     (ngModelChange)="queryChange.emit($event)"
