--- a/src/app/vm/vm-sidebar/vm-sidebar.component.html
+++ b/src/app/vm/vm-sidebar/vm-sidebar.component.html
@@ -4,7 +4,7 @@
       <div class="title-color-container">
         <cs-vm-color
           [vm]="entity"
-          (onColorChange)="colorChanged.emit($event)"
+          (colorChanged)="colorChanged.emit($event)"
         ></cs-vm-color>
       </div>
       <h4 class="details-header">
