add action menu for list mode

--- a/src/app/snapshot/components/vm-snapshot-list-view/vm-snapshot-list-view.component.html
+++ b/src/app/snapshot/components/vm-snapshot-list-view/vm-snapshot-list-view.component.html
@@ -22,5 +22,6 @@
   </button>
 
   <mat-menu #actionsMenu="matMenu">
+    <cs-vm-snapshot-action-menu [snapshot]="item"></cs-vm-snapshot-action-menu>
   </mat-menu>
 </mat-list-item>
