feat(vm-logs): AM/PM (#1404)
* am pm

* add output format to timepicker

* fix style

* add tests

* rename time format dataset

--- a/src/app/vm-logs/vm-logs-filter/vm-logs-filter.component.html
+++ b/src/app/vm-logs/vm-logs-filter/vm-logs-filter.component.html
@@ -63,8 +63,9 @@
     ></cs-date-picker>
 
     <cs-time-picker
+      [outputFormat]="'hour24'"
       [disabled]="isAutoUpdateEnabled"
-      [timeFormat]="'hour24'"
+      [timeFormat]="timeFormat"
       [ngModel]="startTime"
       (ngModelChange)="startTimeChanged.emit($event)"
     ></cs-time-picker>
@@ -84,8 +85,9 @@
     ></cs-date-picker>
 
     <cs-time-picker
+      [outputFormat]="'hour24'"
       [disabled]="isAutoUpdateEnabled"
-      [timeFormat]="'hour24'"
+      [timeFormat]="timeFormat"
       [ngModel]="endTime"
       (ngModelChange)="endTimeChanged.emit($event)"
     ></cs-time-picker>
